# ObbaxBoard

./: README.md  package-lock.json  package.json
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_filter.rs  commands.rs  lib.rs
src/routes/: +page.svelte
